# C_cwiczenia

./: CMakeLists.txt  main.c  z1_1.c  z1_1.h  z1_2.h  z1_3.h  z1_4.c  z1_4.h  z1_5.h  z1_6.c  z1_6.h  z2_1.h  z2_2.h  z2_3.h  z2_4.h  z2_5.h  z3_1.h  z3_2.h  z4_1.h  z4_2.h  z4_3.h
Zajecia_1/: z1_1  z1_2  z1_2.c  z1_3  z1_3.c  z1_4  z1_5  z1_5.c  z1_6
Zajecia_2/: z2_1  z2_1.c  z2_2  z2_2.c  z2_3  z2_3.c  z2_4  z2_4.c  z2_5  z2_5.c
Zajecia_3/: z3_1  z3_1.c  z3_2  z3_2.c
Zajecia_4/: z4_1  z4_1.c  z4_2  z4_2.c  z4_3  z4_3.c
