cmake_minimum_required(VERSION 3.27)
project(C_cwiczenia C)

set(CMAKE_C_STANDARD 11)

add_executable(C_cwiczenia main.c
        z1_2.h
        z1_4.h
        z1_3.h
        z1_5.h
        z1_6.h
        z1_1.h
        z2_1.h
        z2_2.h
        z2_3.h
        z2_4.h
        z2_5.h
        z3_1.h
        z3_2.h
)
