cmake_minimum_required(VERSION 3.27)
project(C_cwiczenia C)

set(CMAKE_C_STANDARD 11)

add_executable(C_cwiczenia
        Zajecia_1/z1_2.c
        Zajecia_1/z1_4.c
        Zajecia_1/z1_3.c
        Zajecia_1/z1_5.c
        Zajecia_1/z1_6.c
        Zajecia_1/z1_1.c
        Zajecia_2/z2_1.c
        Zajecia_2/z2_2.c
        Zajecia_2/z2_3.c
        Zajecia_2/z2_4.c
        Zajecia_2/z2_5.c
        Zajecia_3/z3_1.c
        Zajecia_3/z3_2.c
        Zajecia_4/z4_1.c
        Zajecia_4/z4_2.c
        Zajecia_4/z4_3.c
)
